--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
-    "domain": "dstsensor",
-    "name": "DST Transition Sensor",
-    "codeowners": ["sonofsilberling"],
-    "config_flow": true,
-    "documentation": "https://github.com/sonofsilberling/dstsensor",
-    "iot_class": "local_push",
-    "version": "0.1.0",
-    "loggers": ["custom_components.dstsensor"]
+  "domain": "dstsensor",
+  "name": "DST Transition Sensor",
+  "codeowners": ["@sonofsilberling"],
+  "config_flow": true,
+  "documentation": "https://github.com/sonofsilberling/dstsensor",
+  "issue_tracker": "https://github.com/sonofsilberling/dstsensor/issues",
+  "iot_class": "local_push",
+  "version": "0.2.0",
+  "loggers": ["custom_components.dstsensor"]
 }
